--- a/index.html
+++ b/index.html
@@ -25,11 +25,10 @@
         <ol>
             <li>Turn your speakers on. Loud!</li>
             <li>Just click the button below.</li>
-            <li>Choose an option that better describes your current mood and I'll give you a good soundtrack for
-                your moment.
+            <li>Choose an option that better describes your current mood and I'll give you a good soundtrack for your moment.
             </li>
         </ol>
-        <!-- Note: I used tabindex=0 on the li's to make it more accessible without the mouse, since li's were not giving me :focus effect as buttons. I was instructed by Joey how to use it and that it should have been used sparingly and carefully, because it can create issues with certain browsers. Because of running out of time, I've opted for this. In the near future, I plan to return to this project and include buttons instead of li's, in order to take advantage of the accessibility default of the button element. I'm aware of the risk, but it seems to be working fine in my project. -->
+        <!-- Note: I used tabindex=0 on the li's below to make it more accessible without the mouse, since li's were not giving me :focus effect as buttons. I was instructed by Joey how to use it and that it should have been used sparingly and carefully, because it can create issues with certain browsers. Because of running out of time, I've opted for this. In the near future, I plan to return to this project and include buttons instead of li's, in order to take advantage of the accessibility default of the button element. I'm aware of the risk, but it seems to be working fine in my project. -->
         
         <div class="dropdown">
             <button class="dropbtn">Soundtrack Generator</button>
